fix contrast issue

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -111,6 +111,7 @@ body {
 
 .btn-primary:hover {
     background-color: #FFA408 !important;
+    color: black;
 }
 
 /* Delete button */
